fix double scrollbar on editors.

--- a/client/homebrew/editor/editorTabs.less
+++ b/client/homebrew/editor/editorTabs.less
@@ -32,7 +32,7 @@
 
 [role='tabpanel'] { 
 	flex       : 1 1 auto; 
-	overflow-y : auto;
+	overflow-y : hidden;
 	display: flex;
 	flex-direction: column;
 }
